<resources>
    <string name="app_name">Aplikasi Kasir</string>
    <string name="kasir_kafe_p3ut">Kasir Kafe P3UT</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="belum_punya_akun">Belum Punya Akun ?</string>
    <string name="daftar_akun">DAFTAR AKUN</string>
    <string name="search_hint">Masukan Kata</string>
    <string name="tgl1">2022-10-01 10:26:00</string>
    <string name="no1">202210010001</string>
    <string name="nama1">Nama Kasir</string>
    <string name="tgl2">2022-10-01 10:26:00</string>
    <string name="no2">202210010002</string>
    <string name="nama2">Nama Kasir</string>
    <string name="tgl3">2022-10-01 10:26:00</string>
    <string name="no3">202210010003</string>
    <string name="nama3">Nama Kasir</string>
    <string name="tgl4">2022-10-01 10:26:00</string>
    <string name="no4">202210010004</string>
    <string name="nama4">Nama Kasir</string>
    <string name="tgl5">2022-10-01 10:26:00</string>
    <string name="no5">202210010005</string>
    <string name="nama5">Nama Kasir</string>
    <string name="tgl6">2022-10-01 10:26:00</string>
    <string name="no6">202210010006</string>
    <string name="nama6">Nama Kasir</string>
    <string name="tgl7">2022-10-01 10:26:00</string>
    <string name="no7">202210010007</string>
    <string name="nama7">Nama Kasir</string>
    <string name="tgl8">2022-10-01 10:26:00</string>
    <string name="no8">202210010008</string>
    <string name="nama8">Nama Kasir</string>
    <string name="tgl9">2022-10-01 10:26:00</string>
    <string name="no9">202210010009</string>
    <string name="nama9">Nama Kasir</string>
    <string name="tgl10">2022-10-01 10:26:00</string>
    <string name="no10">2022100100010</string>
    <string name="nama10">Nama Kasir</string>
    <string name="tgl11">2022-10-01 10:26:00</string>
    <string name="no11">2022100100011</string>
    <string name="nama11">Nama Kasir</string>
    <string name="tgl12">2022-10-01 10:26:00</string>
    <string name="no12">2022100100012</string>
    <string name="nama12">Nama Kasir</string>
    <string name="tgl13">2022-10-01 10:26:00</string>
    <string name="no13">2022100100013</string>
    <string name="nama13">Nama Kasir</string>
    <string name="tgl14">2022-10-01 10:26:00</string>
    <string name="no14">2022100100014</string>
    <string name="nama14">Nama Kasir</string>
    <string name="pesan">PESAN</string>
    <string name="ayam_geprek">Ayam Geprek : 12000</string>
    <string name="jeruk">Es Jeruk Peras : 5000</string>
    <string name="kangkung">Kangkung : 10000</string>
    <string name="teh">Es Teh : 5000</string>
    <string name="tongkol">Tongkol : 12000</string>
    <string name="tiwul">Nasi Tiwul : 10000</string>
    <string name="mieayam">Mie Ayam : 10000</string>
    <string name="kwetiaw">Kwetiaw : 10000</string>
    <string name="uduk">Uduk : 10000</string>
    <string name="tempegoreng">Tempe Goreng : 10000</string>
    <string name="sate">Sate : 10000</string>
    <string name="pecel">Pecel : 10000</string>
    <string name="pecellele">Pecel Lele : 15000</string>
    <string name="naskun">Nasi Kuning : 10000</string>
</resources>