<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gading"
    tools:context=".LaporanMenu">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/teks1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tgl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tgl1"/>
            <TextView
                android:id="@+id/no1"
                android:layout_below="@+id/tgl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no1"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/nama1"
                android:layout_below="@+id/no1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks2"
            android:layout_below="@+id/teks1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tgl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tgl2"/>
            <TextView
                android:id="@+id/no2"
                android:layout_below="@+id/tgl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no2"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/nama2"
                android:layout_below="@+id/no2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama2"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks3"
            android:layout_below="@+id/teks2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tgl3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tgl3"/>
            <TextView
                android:id="@+id/no3"
                android:layout_below="@+id/tgl3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no3"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/nama3"
                android:layout_below="@+id/no3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama3"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks4"
            android:layout_below="@+id/teks3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tgl4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tgl4"/>
            <TextView
                android:id="@+id/no4"
                android:layout_below="@+id/tgl4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no4"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/nama4"
                android:layout_below="@+id/no4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama4"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks5"
            android:layout_below="@+id/teks4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tgl5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tgl5"/>
            <TextView
                android:id="@+id/no5"
                android:layout_below="@+id/tgl5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no5"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/nama5"
                android:layout_below="@+id/no5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama5"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks6"
            android:layout_below="@+id/teks5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tgl6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tgl6"/>
            <TextView
                android:id="@+id/no6"
                android:layout_below="@+id/tgl6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no6"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/nama6"
                android:layout_below="@+id/no6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama6"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks7"
            android:layout_below="@+id/teks6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tgl7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tgl7"/>
            <TextView
                android:id="@+id/no7"
                android:layout_below="@+id/tgl7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no7"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/nama7"
                android:layout_below="@+id/no7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama7"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks8"
            android:layout_below="@+id/teks7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tgl8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tgl8"/>
            <TextView
                android:id="@+id/no8"
                android:layout_below="@+id/tgl8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no8"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/nama8"
                android:layout_below="@+id/no8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama8"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks9"
            android:layout_below="@+id/teks8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tgl9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tgl9"/>
            <TextView
                android:id="@+id/no9"
                android:layout_below="@+id/tgl9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no9"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/nama9"
                android:layout_below="@+id/no9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama9"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks10"
            android:layout_below="@+id/teks9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tgl10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tgl10"/>
            <TextView
                android:id="@+id/no10"
                android:layout_below="@+id/tgl10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no10"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/nama10"
                android:layout_below="@+id/no10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama10"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks11"
            android:layout_below="@+id/teks10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tgl11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tgl11"/>
            <TextView
                android:id="@+id/no11"
                android:layout_below="@+id/tgl11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no11"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/nama11"
                android:layout_below="@+id/no11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama11"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks12"
            android:layout_below="@+id/teks11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tgl12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tgl12"/>
            <TextView
                android:id="@+id/no12"
                android:layout_below="@+id/tgl12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no12"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/nama12"
                android:layout_below="@+id/no12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama12"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks13"
            android:layout_below="@+id/teks12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tgl13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tgl13"/>
            <TextView
                android:id="@+id/no13"
                android:layout_below="@+id/tgl13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no13"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/nama13"
                android:layout_below="@+id/no13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama13"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks14"
            android:layout_below="@+id/teks13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tgl14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tgl14"/>
            <TextView
                android:id="@+id/no14"
                android:layout_below="@+id/tgl14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no14"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/nama14"
                android:layout_below="@+id/no14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama14"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks15"
            android:layout_below="@+id/teks14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tgl15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tgl10"/>
            <TextView
                android:id="@+id/no15"
                android:layout_below="@+id/tgl15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no7"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/nama15"
                android:layout_below="@+id/no7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama7"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks16"
            android:layout_below="@+id/teks15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tgl16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tgl8"/>
            <TextView
                android:id="@+id/no16"
                android:layout_below="@+id/tgl8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no8"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/nama16"
                android:layout_below="@+id/no8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama8"/>
        </LinearLayout>

    </RelativeLayout>


</ScrollView>